additional endpoints + swagger docs
